--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
                 </license>
         </licenses>
 
+        <scm>
+                <developerConnection>scm:git:file:///home/obale/pca</developerConnection>
+        </scm>
+
         <developers>
                 <developer>
                         <id>Alex Oberhauser</id>
@@ -86,6 +90,18 @@
                                         <source>1.6</source>
                                         <target>1.6</target>
                                 </configuration>
+                        </plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-scm-plugin</artifactId>
+                                <version>1.3</version>
+                                <dependencies>
+                                        <dependency>
+                                                <groupId>org.apache.maven.scm</groupId>
+                                                <artifactId>maven-scm-provider-gitexe</artifactId>
+                                                <version>1.2</version>
+                                        </dependency>
+                                </dependencies>
                         </plugin>
                 </plugins>
         </build>
