--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
                                 <role>developer</role>
                         </roles>
                 </developer>
+                <developer>
+                        <id>Corneliu-Valentin Stanciu</id>
+                        <name>Corneliu-Valentin Stanciu</name>
+                        <email>stanciucorneliu@networld.to</email>
+                        <url>http://koni.networld.to/foaf.rdf#me</url>
+                        <organization>Networld</organization>
+                        <organizationUrl>http://networld.to</organizationUrl>
+                        <roles>
+                                <role>architect</role>
+                                <role>developer</role>
+                        </roles>
+                </developer>
         </developers>
 
         <modules>
