--- a/pca-communication/pom.xml
+++ b/pca-communication/pom.xml
@@ -25,6 +25,11 @@
                         <artifactId>junit</artifactId>
                         <version>4.5</version>
                 </dependency>
+                <dependency>
+                        <groupId>to.networld.cyberagent</groupId>
+                        <artifactId>pca-monitoring</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                </dependency>
         </dependencies>
 
         <build>
