Improving the error handling and logging output, adding the GPLv3 license to the source files and renaming config files.

--- a/pca-communication/src/main/resources/default.properties
+++ b/pca-communication/src/main/resources/default.properties
@@ -7,5 +7,6 @@ ssl.type=TLS
 keystore.file=/keys/keystore.jks
 keystore.type=JKS
 keystore.password=1234567890
+certificate.alias=sslserver
 keymanager.type=SunX509
 keymanager.password=1234567890
