Moving the configuration files and keys to the right packages. Adding HTTP and SOAP functionality for the status handling.

--- a/pca-communication/src/main/resources/to/networld/cyberagent/communication/default.properties
+++ b/pca-communication/src/main/resources/to/networld/cyberagent/communication/default.properties
@@ -4,7 +4,7 @@ ssl.port=5443
 ssl.type=TLS
 
 # SSL Certificate Parameters
-keystore.file=/keys/keystore.jks
+keystore.file=keys/keystore.jks
 keystore.type=JKS
 keystore.password=1234567890
 certificate.alias=sslserver
