--- a/pca-core/pom.xml
+++ b/pca-core/pom.xml
@@ -25,6 +25,11 @@
                         <artifactId>pca-communication</artifactId>
                         <version>0.1-SNAPSHOT</version>
                 </dependency>
+                <dependency>
+                        <groupId>to.networld.cyberagent</groupId>
+                        <artifactId>pca-monitoring</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                </dependency>
         </dependencies>
 
         <build>
@@ -52,6 +57,21 @@
                                                 </goals>
                                         </execution>
                                 </executions>
+                        </plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-shade-plugin</artifactId>
+                                <executions>
+                                        <execution>
+                                                <phase>package</phase>
+                                                <goals>
+                                                        <goal>shade</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                                <configuration>
+                                        <finalName>pca-framework-${version}</finalName>
+                                </configuration>
                         </plugin>
                 </plugins>
                 <resources>
