--- a/pca-monitoring/src/main/resources/to/networld/cyberagent/monitoring/log4j.properties
+++ b/pca-monitoring/src/main/resources/to/networld/cyberagent/monitoring/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=monitoring, stdout 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d : %-20t %-7p %-15c : %m%n
-log4j.logger.monitoring=DEBUG
+log4j.appender.stdout.layout.ConversionPattern=%d : %-15t %-7p %c : %m%n
+log4j.logger.monitoring=ALL
