Fixing wrong log4j.properties wrong path in jar file. Renanimg main classes.

--- a/pca-communication/src/main/resources/to/networld/cyberagent/communication/default.properties
+++ b/pca-communication/src/main/resources/to/networld/cyberagent/communication/default.properties
@@ -10,3 +10,6 @@ keystore.password=1234567890
 certificate.alias=sslserver
 keymanager.type=SunX509
 keymanager.password=1234567890
+
+# Trusted Keystore
+keystore.trusted=keys/cacerts.jks
