--- a/pca-core/pom.xml
+++ b/pca-core/pom.xml
@@ -30,6 +30,11 @@
                         <artifactId>pca-monitoring</artifactId>
                         <version>0.1-SNAPSHOT</version>
                 </dependency>
+                <dependency>
+                        <groupId>to.networld.cyberagent</groupId>
+                        <artifactId>pca-security</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                </dependency>
         </dependencies>
 
         <build>
