--- a/pca-communication/pom.xml
+++ b/pca-communication/pom.xml
@@ -22,6 +22,11 @@
         <dependencies>
                 <dependency>
                         <groupId>to.networld.cyberagent</groupId>
+                        <artifactId>pca-security</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                        <groupId>to.networld.cyberagent</groupId>
                         <artifactId>pca-monitoring</artifactId>
                         <version>0.1-SNAPSHOT</version>
                 </dependency>
