Implementing the decryption and signature check in the server. Fixing logging and printing the unencrypted SOAPMessage to the STDERR.

--- a/pca-security/src/main/resources/to/networld/cyberagent/security/security.properties
+++ b/pca-security/src/main/resources/to/networld/cyberagent/security/security.properties
@@ -1,4 +1,8 @@
-security.keystore=to/networld/cyberagent/security/keys/keystore.jks
+# Public Certificates
+security.keystore=keys/keystore.jks
 security.password=v3ryS3cr3t
-security.type=JKS
-security.cacert=rootca
+
+# X.509 Certificate (public/private)
+security.pkcs12file=keys/rootca.p12
+security.pkcs12alias=rootca
+security.pkcs12password=rootca
