--- a/pca-monitoring/src/main/resources/to/networld/cyberagent/monitoring/log4j.properties
+++ b/pca-monitoring/src/main/resources/to/networld/cyberagent/monitoring/log4j.properties
@@ -1,5 +1,6 @@
-log4j.rootLogger=monitoring, stdout 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d : %-15t %-7p %c : %m%n
-log4j.logger.monitoring=ALL
+log4j.rootLogger=ERROR
+log4j.logger.to.networld.cyberagent=DEBUG, S
+
+log4j.appender.S=org.apache.log4j.ConsoleAppender
+log4j.appender.S.layout=org.apache.log4j.PatternLayout
+log4j.appender.S.layout.ConversionPattern=%d : %-15t %-7p %c : %m%n
