--- a/pca-common/pom.xml
+++ b/pca-common/pom.xml
@@ -15,9 +15,9 @@
         <groupId>to.networld.cyberagent</groupId>
         <packaging>jar</packaging>
         <version>0.1-SNAPSHOT</version>
-        <artifactId>pca-monitoring</artifactId>
+        <artifactId>pca-common</artifactId>
         <url>http://cyberagent.networld.to</url>
-        <name>Networld Personal Cyber Agent - Monitoring</name>
+        <name>Networld Personal Cyber Agent - API/Common</name>
 
         <dependencies>
                 <dependency>
@@ -26,5 +26,19 @@
                         <version>1.2.16</version>
                 </dependency>
         </dependencies>
+
+        <build>
+                <plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>2.0.2</version>
+                                <configuration>
+                                        <source>1.6</source>
+                                        <target>1.6</target>
+                                </configuration>
+                        </plugin>
+                </plugins>
+        </build>
 
 </project>
