--- a/pca-core/pom.xml
+++ b/pca-core/pom.xml
@@ -22,17 +22,17 @@
         <dependencies>
                 <dependency>
                         <groupId>to.networld.cyberagent</groupId>
+                        <artifactId>pca-security</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                        <groupId>to.networld.cyberagent</groupId>
                         <artifactId>pca-communication</artifactId>
                         <version>0.1-SNAPSHOT</version>
                 </dependency>
                 <dependency>
                         <groupId>to.networld.cyberagent</groupId>
-                        <artifactId>pca-monitoring</artifactId>
-                        <version>0.1-SNAPSHOT</version>
-                </dependency>
-                <dependency>
-                        <groupId>to.networld.cyberagent</groupId>
-                        <artifactId>pca-security</artifactId>
+                        <artifactId>pca-reasoning</artifactId>
                         <version>0.1-SNAPSHOT</version>
                 </dependency>
         </dependencies>
