Implementing inter-application communication and adding GPLv3

--- a/pca-core/pom.xml
+++ b/pca-core/pom.xml
@@ -46,7 +46,7 @@
                                         <archive>
                                                 <manifest>
                                                         <addClasspath>true</addClasspath>
-                                                        <mainClass>to.networld.cyberagent.MainSSLServer</mainClass>
+                                                        <mainClass>to.networld.cyberagent.PCADaemon</mainClass>
                                                 </manifest>
                                         </archive>
                                 </configuration>
