--- a/pca-security/src/main/resources/to/networld/cyberagent/security/security.properties
+++ b/pca-security/src/main/resources/to/networld/cyberagent/security/security.properties
@@ -1,8 +1,8 @@
 # Public Certificates
-security.keystore=keys/keystore.jks
+security.keystore=to/networld/cyberagent/security/keys/keystore.jks
 security.password=v3ryS3cr3t
 
 # X.509 Certificate (public/private)
-security.pkcs12file=keys/rootca.p12
+security.pkcs12file=to/networld/cyberagent/security/keys/rootca.p12
 security.pkcs12alias=rootca
 security.pkcs12password=rootca
