--- a/pca-reasoning/pom.xml
+++ b/pca-reasoning/pom.xml
@@ -34,7 +34,6 @@
                 </repository>
         </repositories>
 
-
         <parent>
                 <groupId>to.networld.cyberagent</groupId>
                 <artifactId>pca</artifactId>
@@ -61,10 +60,17 @@
                         <version>4.7.3</version>
                 </dependency>
                 <dependency>
-                        <groupId>org.openrdf</groupId>
-                        <artifactId>sesame</artifactId>
-                        <version>1.2.7</version>
+                        <groupId>org.semweb4j</groupId>
+                        <artifactId>rdf2go.impl.sesame23</artifactId>
+                        <version>4.7.3</version>
                 </dependency>
+                <!--
+                <dependency>
+                        <groupId>org.openrdf</groupId>
+                        <artifactId>openrdf-rdf2go</artifactId>
+                        <version>4.5.0-SNAPSHOT</version>
+                </dependency>
+                -->
                 <dependency>
                         <groupId>to.networld.semantic</groupId>
                         <artifactId>scrawler</artifactId>
