--- a/pca-reasoning/pom.xml
+++ b/pca-reasoning/pom.xml
@@ -64,6 +64,11 @@
                         <artifactId>rdf2go.impl.sesame23</artifactId>
                         <version>4.7.3</version>
                 </dependency>
+                <dependency>
+                        <groupId>commons-httpclient</groupId>
+                        <artifactId>commons-httpclient</artifactId>
+                        <version>3.1</version>
+                </dependency>
                 <!--
                 <dependency>
                         <groupId>org.openrdf</groupId>
