--- a/pca-reasoning/src/main/resources/to/networld/cyberagent/reasoning/default.properties
+++ b/pca-reasoning/src/main/resources/to/networld/cyberagent/reasoning/default.properties
@@ -1,1 +1,5 @@
+pca.persistent.remoteurl=http://localhost:8080/openrdf-sesame/
+pca.persistent.remotedb=pcadb
+
+# Fallback if the remote repository is not available.
 pca.persistent.datadir=/tmp/pca_registry
