Integrating the security into the communication layer.

--- a/pca-communication/pom.xml
+++ b/pca-communication/pom.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"> 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
         <properties>
                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         </properties>
+
+        <repositories>
+                <repository>
+                        <id>networld-repo</id>
+                        <name>Networld Repository</name>
+                        <url>http://repo1.networld.to</url>
+                </repository>
+        </repositories>
 
         <parent>
                 <groupId>to.networld.cyberagent</groupId>
@@ -24,6 +32,11 @@
                         <groupId>to.networld.cyberagent</groupId>
                         <artifactId>pca-common</artifactId>
                         <version>0.1-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                        <groupId>to.networld.soap.security</groupId>
+                        <artifactId>soap_security_framework</artifactId>
+                        <version>0.2</version>
                 </dependency>
         </dependencies>
 
