Deleting AccessHandler class. Fixing the concurrent exception bug in the reasoner component.

--- a/pca-reasoning/pom.xml
+++ b/pca-reasoning/pom.xml
@@ -77,6 +77,11 @@
                 </dependency>
                 -->
                 <dependency>
+                        <groupId>net.jcip</groupId>
+                        <artifactId>jcip-annotations</artifactId>
+                        <version>1.0</version>
+                </dependency>
+                <dependency>
                         <groupId>to.networld.semantic</groupId>
                         <artifactId>scrawler</artifactId>
                         <version>0.2</version>
