--- a/pca-reasoning/pom.xml
+++ b/pca-reasoning/pom.xml
@@ -88,4 +88,16 @@
                 </dependency>
         </dependencies>
 
+        <reporting>
+                <plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-javadoc-plugin</artifactId>
+                                <version>2.7</version>
+                                <configuration>
+                                </configuration>
+                        </plugin>
+                </plugins>
+        </reporting>
+
 </project>
