Reducing to the queues to the two important (Request/Response). Checking the expire date of the SOAP messages.

--- a/pca-common/src/main/resources/default.properties
+++ b/pca-common/src/main/resources/default.properties
@@ -32,6 +32,8 @@ communication.security.pkcs12file=keys/rootca.p12
 communication.security.pkcs12alias=rootca
 communication.security.pkcs12password=C673BDD5CE9CEAFF1692D08947E44699
 
+# Is user authentication (on base of X.509 certificates) obligatory
+communication.security.authentication=true
 
 ########################################
 # to.networld.cyberagent.reasoning
