Changing the log4 settings to DEBUG for reasoning and INFO for the rest. Adding the missing queues implementations.

--- a/pca-common/src/main/resources/log4j.properties
+++ b/pca-common/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
 log4j.rootLogger=ERROR
 #log4j.logger.to.networld.cyberagent=DEBUG, S, R
-log4j.logger.to.networld.cyberagent=DEBUG, S
+log4j.logger.to.networld.cyberagent=INFO, S
+log4.logger.to.networld.cyberagent.reasoning=DEBUG, S
 
 log4j.appender.S=org.apache.log4j.ConsoleAppender
 log4j.appender.S.layout=org.apache.log4j.PatternLayout
-#log4j.appender.S.layout.ConversionPattern=%d : %-15t %-7p %-37c : %m%n
 log4j.appender.S.layout.ConversionPattern=%d : %-15t %-7p %27F:%-4L : %m%n
 
 #log4j.appender.R=org.apache.log4j.RollingFileAppender
