--- a/pca-common/src/main/resources/log4j.properties
+++ b/pca-common/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=ERROR
 #log4j.logger.to.networld.cyberagent=DEBUG, S, R
-log4j.logger.to.networld.cyberagent=INFO, S
+log4j.logger.to.networld.cyberagent=TRACE, S
 log4.logger.to.networld.cyberagent.reasoning=DEBUG, S
 
 log4j.appender.S=org.apache.log4j.ConsoleAppender
