Fixing spelling error in log4j.properties file.

--- a/pca-common/src/main/resources/log4j.properties
+++ b/pca-common/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=ERROR
 #log4j.logger.to.networld.cyberagent=DEBUG, S, R
 log4j.logger.to.networld.cyberagent=TRACE, S
-log4.logger.to.networld.cyberagent.reasoning=DEBUG, S
+log4j.logger.to.networld.cyberagent.reasoning=DEBUG, S
 
 log4j.appender.S=org.apache.log4j.ConsoleAppender
 log4j.appender.S.layout=org.apache.log4j.PatternLayout
